data/rq2/deepseek/intermediate/buffer/workspace/final_projects/buffer/translate_by_qwen3_coder/.c2r_bindgen_fns/buffer_2173e5ad.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn buffer_new() -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_new_with_size(n: size_t) -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_new_with_string(str_: *mut ::core::ffi::c_char) -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_new_with_string_length(
        str_: *mut ::core::ffi::c_char,
        len: size_t,
    ) -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_new_with_copy(str_: *mut ::core::ffi::c_char) -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_size(self_: *mut buffer_t) -> size_t;
}
unsafe extern "C" {
    pub fn buffer_length(self_: *mut buffer_t) -> size_t;
}
unsafe extern "C" {
    pub fn buffer_free(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_prepend(
        self_: *mut buffer_t,
        str_: *mut ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn buffer_append(
        self_: *mut buffer_t,
        str_: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn buffer_appendf(
        self_: *mut buffer_t,
        format: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn buffer_append_n(
        self_: *mut buffer_t,
        str_: *const ::core::ffi::c_char,
        len: size_t,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn buffer_equals(self_: *mut buffer_t, other: *mut buffer_t) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn buffer_indexof(self_: *mut buffer_t, str_: *mut ::core::ffi::c_char) -> ssize_t;
}
unsafe extern "C" {
    pub fn buffer_slice(self_: *mut buffer_t, from: size_t, to: ssize_t) -> *mut buffer_t;
}
unsafe extern "C" {
    pub fn buffer_compact(self_: *mut buffer_t) -> ssize_t;
}
unsafe extern "C" {
    pub fn buffer_fill(self_: *mut buffer_t, c: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn buffer_clear(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_trim_left(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_trim_right(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_trim(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_print(self_: *mut buffer_t);
}
unsafe extern "C" {
    pub fn buffer_resize(self_: *mut buffer_t, n: size_t) -> ::core::ffi::c_int;
}
